Cartesian FFT in module sampling
* Improved spatial FFT of volume of each time point (:,:,:,t) using PyTorch, thus:
 * Automatically put on GPU (CUDA) if available
 * Automatically choose batch size based on the free space on the GPU
 * Automatically choose GPU with most free space
* Save new transformed volume in memmap on hard disk

* Also using for load and create the batches:
 -> PyTorch custom Dataset
 -> PyTorch DataLoader

* Further created for easier GPU handling: class ConfiguratorGPU
  -> It checks if GPU and how much space is available, print it to the console and also select least busy GPU.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Ignore all files in the code/config/ folder
 code/config/*
+cache
 
 # Except for config_template.json
 !code/config/config_template.json
