Added Trajectories reader
* Added Trajectories reader in module 'file'
  -> Possible to read .mat files
  -> Also checks if the necessary keys are available (depends on the .mat file)
  -> TODO: Maybe not hard code the required key (!)
  -> Possible to print the loaded data to console (except the large numpy arrays)

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # Ignore all files in the code/config/ folder
 code/config/*
+code/tests/*
+code/coils_cropped_cartesian_compressed.h5
 cache
 
 # Except for config_template.json
