--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Ignore all files in the code/config/ folder
-code/config/*
+code/config/config_*
 code/tests/*
 code/coils_cropped_cartesian_compressed.h5
 cache
