Changed trajectories and gradient json files
Renaming:
 * crt_trajectories_pack.json       -> trajectories_gradient.json
 * crt_trajectories_structure.json  -> trajectories_structure.json

Naming of the keys:
 * from "abc defgh ijk" -> "AbcDefghIjk" (and thus to Camel case)
 * from nested categories to a flattened version with Camel case:
      "
       abc:                   AbcDefg
         defg: xxx,   ---->
       ijkl:                  IjklMnop
         mnop: xxx,
      "

Structure in files:
 * in trajectories_gradient.json -> now arrays instead of entry for each trajectory.
   -> was before: "trajectory 1", "trajectory 2" and so on -> now arrays with values

TODO IMPORTANT:
 * Delete / Integrate the content of the "additional" folder and remove the "crt_*" json files!

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,13 @@
 # Ignore all files in the code/config/ folder
-code/config/config_*
+code/config/paths_*
+code/config/OLD/config_*
+code/config/OLD/paths_*
 code/tests/*
 code/coils_cropped_cartesian_compressed.h5
 cache
 
 # Except for config_template.json
-!code/config/config_template.json
+!code/config/paths_template.json
+!code/config/trajectories_gradient.json
+!code/config/trajectories_structure.json
+!code/config/bids_test.json
