--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,13 @@
 # Ignore all files in the code/config/ folder
-code/config/paths_*
-code/config/OLD/config_*
-code/config/OLD/paths_*
+config/paths_*
+config/OLD/config_*
+config/OLD/paths_*
 code/tests/*
-code/coils_cropped_cartesian_compressed.h5
+data/coils_cropped_cartesian_compressed.h5
 cache
 
-# Except for config_template.json
-!code/config/paths_template.json
-!code/config/trajectories_gradient.json
-!code/config/trajectories_structure.json
-!code/config/bids_test.json
+# Except for paths_template.json
+!config/paths_template.json
+!data/trajectories_gradient.json
+!data/trajectories_structure.json
+!config/OLD/bids_test.json
