Added docker images & jupyter notebooks
* The docker images can be found at: https://hub.docker.com/repository/docker/boraborapalm/synthetic_mrsi/general
* Three notebooks are included:
   -> one for the cartesian simulation
   -> one for the non-cartesian simulation (uncompleted)
   -> one for WET (uncompleted)

* Need to fix that always on GPU 0 memory is allocated
* Need to add noise and B0 to cartesian simulation

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@ config/paths_*
 config/OLD/config_*
 config/OLD/paths_*
 code/tests/*
+code/OLD/*
+code/This/*
+docker/*.sh
 data/coils_cropped_cartesian_compressed.h5
 cache
 
@@ -12,3 +15,6 @@ cache
 !data/trajectories_gradient.json
 !data/trajectories_structure.json
 !config/OLD/bids_test.json
+
+# docker temp artifacts
+docker/.tmp-*
