--- a/env/MRSI_simulation.yml
+++ b/env/MRSI_simulation.yml
@@ -23,10 +23,19 @@ dependencies:
   - distributed=2023.9.2     # for dask dashboard (matching dask)
   - bokeh=3.2.2              # for dask dashboard (pinned to avoid proxy issues)
 
+  # Zarr (needed for dask.array.to_zarr / from_zarr)
+  - zarr
+  - numcodecs
+
   # Jupyter / Dask dashboard integration
   - jupyterlab=4.5.0         # for dask dashboard (needed for the labextension UI)
   - dask-labextension=7.0.0  # for dask dashboard (matches JupyterLab 4)
   - jupyter-server-proxy     # needed so Jupyter can proxy the Dask dashboard
+
+  # Interactive Matplotlib in JupyterLab (ipympl backend + widget manager)
+  - ipympl
+  - ipywidgets
+  - jupyterlab_widgets
 
   # Plotting
   - matplotlib
@@ -52,4 +61,3 @@ dependencies:
       - git+https://github.com/BoraBoraPalm/PrettyConsole.git  # from https://github.com/BoraBoraPalm
       - jupyterlab-nvdashboard==0.13.0                         # NVDashboard for JupyterLab 4+
       - psutil                                                 # required by NVDashboard; installed via pip
-
